added main pieces

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   },
   "parser": "babel-eslint",
   "rules": {
-    linebreak-style: [2, "windows"]
+    linebreak-style: 0
   },
   "plugins": [
       "babel"
