--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
   },
   "parser": "babel-eslint",
   "rules": {
-    linebreak-style: 0
+    linebreak-style: 0,
+    'no-console': 'off'
   },
   "plugins": [
       "babel"
