--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/back-end/index.js",
   "scripts": {
     "test": "jest --coverage",
-    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./coverage,./test,./npm-debug.log --copy-files",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./coverage,./test,./src/front-end,./npm-debug.log --copy-files",
     "start-server": "npm run build && node dist/src/back-end/index.js",
     "lint": "node node_modules/eslint/bin/eslint.js -c .eslintrc ./src/**/*"
   },
@@ -31,10 +31,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "9.0.0",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^5.2.0",
+    "eslint": "5.6.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-import": "^2.13.0",
